feat: iniciado componente header e ajuste de estrutura

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,7 +3,11 @@
 
 @import './components/atoms/logo.scss';
 @import './components/atoms/navbarLink.scss';
+@import './components/atoms/experienceTitle.scss';
 
 @import './components/molecules/navbar.scss';
+@import './components/molecules/heroText.scss';
+@import './components/molecules/experienceList.scss';
 
 @import './components/organisms/header.scss';
+@import './components/organisms/hero.scss';
