feat: estilização componente de rede social

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,7 @@
 @import './components/molecules/navbar.scss';
 @import './components/molecules/heroText.scss';
 @import './components/molecules/experienceList.scss';
+@import './components/molecules/floatingSocial.scss';
 
 @import './components/organisms/header.scss';
 @import './components/organisms/hero.scss';
