--- a/src/scss/components/molecules/floatingSocial.scss
+++ b/src/scss/components/molecules/floatingSocial.scss
@@ -6,18 +6,21 @@
   justify-content: center;
   align-items: center;
   top: 0;
-  left: 0;
-  right: auto;
-  bottom: auto;
+  left: 3%;
+  right: 0;
+  bottom: 0;
   width: 32rem;
   height: 32rem;
-
   background-origin: border-box;
   background-clip: content-box, border-box;
   background-size: cover;
   box-sizing: border-box;
+  transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+  @include animation(
+    'floating-github 8s 1s cubic-bezier(0.4, 0.01, 0.165, 0.99) infinite'
+  );
 
-  &:before {
+  &::before {
     transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
     content: '';
     position: absolute;
@@ -33,31 +36,75 @@
     border-radius: 50%;
   }
 
-  &:hover::before {
-    opacity: 1;
+  &:hover {
     transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
     transform: scale(1.2);
+
+    svg {
+      opacity: 1;
+      color: $gray-300;
+      transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+    }
   }
 
   &__link {
-    width: 60px;
-    height: 60px;
+    width: 100%;
+    height: 100%;
     z-index: 1;
-    background: $white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+  }
+
+  &__overlay {
+    background: #fff;
+    border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 0.8rem;
-    border-radius: 50%;
+  }
+
+  svg {
+    fill: currentColor;
+    height: auto;
+    max-width: 66vmin;
+    transform-origin: center;
+    width: auto;
+    position: absolute;
+    @include animation('rotateText 10s linear infinite');
+    opacity: 0;
     transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+    pointer-events: none;
 
-    &:hover {
-      transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
-      transform: scale(1.3);
+    text {
+      font-size: 0.4rem;
+      letter-spacing: -0.03em;
     }
+  }
 
-    img {
-      width: 100%;
-    }
+  &:nth-child(3) {
+    top: 0;
+    left: auto;
+    right: 5%;
+    bottom: auto;
+    width: 28rem;
+    height: 28rem;
+    @include animation(
+      'floating-gmail 8s cubic-bezier(0.4, 0.01, 0.165, 0.99) infinite'
+    );
+  }
+
+  &:nth-child(4) {
+    top: auto;
+    left: 14%;
+    right: auto;
+    bottom: 0;
+    width: 22rem;
+    height: 22rem;
+    @include animation(
+      'floating-linkedin 8s 1s cubic-bezier(0.4, 0.01, 0.165, 0.99) infinite'
+    );
   }
 }
