Componente de Skills

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,6 +5,7 @@
 @import './components/atoms/navbarLink.scss';
 @import './components/atoms/experienceTitle.scss';
 @import './components/atoms/subtitle.scss';
+@import './components/atoms/skill.scss';
 
 @import './components/molecules/navbar.scss';
 @import './components/molecules/heroText.scss';
@@ -12,7 +13,9 @@
 @import './components/molecules/floatingSocial.scss';
 @import './components/molecules/sectionHeader.scss';
 @import './components/molecules/presentationPhoto.scss';
+@import './components/molecules/skillList.scss';
 
 @import './components/organisms/header.scss';
 @import './components/organisms/hero.scss';
 @import './components/organisms/introduction.scss';
+@import './components/organisms/skills.scss';
