estrutura da section portfolio

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,8 +14,12 @@
 @import './components/molecules/sectionHeader.scss';
 @import './components/molecules/presentationPhoto.scss';
 @import './components/molecules/skillList.scss';
+@import './components/molecules/projectList.scss';
+@import './components/molecules/projectCard.scss';
+@import './components/molecules/techList.scss';
 
 @import './components/organisms/header.scss';
 @import './components/organisms/hero.scss';
 @import './components/organisms/introduction.scss';
 @import './components/organisms/skills.scss';
+@import './components/organisms/portfolio.scss';
