--- a/src/scss/components/molecules/projectCard.scss
+++ b/src/scss/components/molecules/projectCard.scss
@@ -1,6 +1,38 @@
 .projectCard {
   position: relative;
 
+  @media screen and (min-width: 1120px) {
+    &:nth-child(1) {
+      grid-column: 1;
+      grid-row: 1 / span 2;
+    }
+
+    &:nth-child(2) {
+      grid-column: 2;
+      grid-row: 2 / span 1;
+    }
+
+    &:nth-child(3) {
+      grid-column: 3;
+      grid-row: 1 / span 2;
+    }
+
+    &:nth-child(4) {
+      grid-column: 1;
+      grid-row: 3 / span 2;
+    }
+
+    &:nth-child(5) {
+      grid-column: 2;
+      grid-row: 4 / span 1;
+    }
+
+    &:nth-child(6) {
+      grid-column: 3;
+      grid-row: 3 / span 2;
+    }
+  }
+
   &:nth-child(1) {
     grid-column: 1;
     grid-row: 1 / span 2;
@@ -17,49 +49,26 @@
     grid-column: 2;
     grid-row: 4 / span 1;
   }
+  &:nth-child(5) {
+    grid-column: 1;
+    grid-row: 5 / span 2;
+  }
+  &:nth-child(6) {
+    grid-column: 2;
+    grid-row: 6 / span 1;
+  }
 
   &__container {
     position: relative;
-  }
-
-  &:hover {
-    // background-color: red;
-
-    .projectCard__overlay {
-      background: linear-gradient(0deg, rgba(9, 9, 10, 0.8), transparent);
-      position: absolute;
-      height: 25%;
-      width: 100%;
-      bottom: 0;
-      z-index: 1;
-      transition: .7s;
-    }
-
-    .projectCard__header {
-      opacity: 1;
-      visibility: visible;
-      transition: .7s;
-    }
-  }
-
-  &__overlay {
-    transition: .7s;
   }
 
   &__header {
     display: flex;
     align-items: flex-start;
     flex-direction: column;
-    position: absolute;
-    bottom: 0;
     width: 100%;
-    height: 120px;
     justify-content: flex-end;
     z-index: 2;
-    padding: 2rem 1.5rem;
-    opacity: 0;
-    visibility: hidden;
-    transition: .7s;
 
     h4 {
       font-size: 2.6rem;
