Ajustes Header e Card

--- a/src/scss/components/atoms/subtitle.scss
+++ b/src/scss/components/atoms/subtitle.scss
@@ -1,8 +1,10 @@
 .sectionHeader__subtitle {
-  font-size: 2rem;
+  font-size: 2.6rem;
   line-height: 150%;
   font-weight: 600;
   text-transform: uppercase;
   color: $gray-500;
-  margin-bottom: 0.5rem;
+  margin-bottom: -0.5rem;
+  font-family: 'Raleway', sans-serif;
+  letter-spacing: -0.03em;
 }
