--- a/src/scss/components/molecules/projectCard.scss
+++ b/src/scss/components/molecules/projectCard.scss
@@ -33,29 +33,31 @@
     }
   }
 
-  &:nth-child(1) {
-    grid-column: 1;
-    grid-row: 1 / span 2;
-  }
-  &:nth-child(2) {
-    grid-column: 2;
-    grid-row: 2 / span 1;
-  }
-  &:nth-child(3) {
-    grid-column: 1;
-    grid-row: 3 / span 2;
-  }
-  &:nth-child(4) {
-    grid-column: 2;
-    grid-row: 4 / span 1;
-  }
-  &:nth-child(5) {
-    grid-column: 1;
-    grid-row: 5 / span 2;
-  }
-  &:nth-child(6) {
-    grid-column: 2;
-    grid-row: 6 / span 1;
+  @media screen and (max-width: 1118px) {
+    &:nth-child(1) {
+      grid-column: 1;
+      grid-row: 1 / span 2;
+    }
+    &:nth-child(2) {
+      grid-column: 2;
+      grid-row: 2 / span 1;
+    }
+    &:nth-child(3) {
+      grid-column: 1;
+      grid-row: 3 / span 2;
+    }
+    &:nth-child(4) {
+      grid-column: 2;
+      grid-row: 4 / span 1;
+    }
+    &:nth-child(5) {
+      grid-column: 1;
+      grid-row: 5 / span 2;
+    }
+    &:nth-child(6) {
+      grid-column: 2;
+      grid-row: 6 / span 1;
+    }
   }
 
   &__container {
