--- a/src/scss/components/molecules/sectionHeader.scss
+++ b/src/scss/components/molecules/sectionHeader.scss
@@ -3,8 +3,9 @@
   margin-bottom: 2.8rem;
 
   &__title {
-    font-size: 3.2rem;
+    font-size: 4.2rem;
     line-height: 150%;
     font-weight: 700;
+    letter-spacing: -0.03em;
   }
 }
