--- a/src/scss/components/organisms/header.scss
+++ b/src/scss/components/organisms/header.scss
@@ -4,6 +4,7 @@
   width: 100%;
   top: 0;
   z-index: 9;
+  background: linear-gradient(180deg, #070809 0%, rgba(0, 0, 0, 0) 100%);
 
   &__container {
     display: flex;
