--- a/src/scss/components/organisms/introduction.scss
+++ b/src/scss/components/organisms/introduction.scss
@@ -3,7 +3,7 @@
   align-items: center;
   flex-direction: column;
   max-width: 1920px;
-  margin: 7rem 0;
+  margin: 8rem 0;
   
 
   &__container {
@@ -15,13 +15,14 @@
 
   .textAboutMe {
     height: 100%;
-    margin: 6.6rem 0 0 2rem;
-    max-width: 650px;
+    margin: 8.6rem 0 0 2.5rem;
+    max-width: 740px;
 
     p {
       line-height: 150%;
       color: $gray-300;
       margin-bottom: 1rem;
+      font-size: 1.8rem;
     }
   }
 }
