Feat: Componente de contato

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,9 +17,11 @@
 @import './components/molecules/projectList.scss';
 @import './components/molecules/projectCard.scss';
 @import './components/molecules/techList.scss';
+@import './components/molecules/contactList.scss';
 
 @import './components/organisms/header.scss';
 @import './components/organisms/hero.scss';
 @import './components/organisms/introduction.scss';
 @import './components/organisms/skills.scss';
 @import './components/organisms/portfolio.scss';
+@import './components/organisms/contact.scss';
