Feat: Componente Footer

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,6 +18,7 @@
 @import './components/molecules/projectCard.scss';
 @import './components/molecules/techList.scss';
 @import './components/molecules/contactList.scss';
+@import './components/molecules/contactsFooter.scss';
 
 @import './components/organisms/header.scss';
 @import './components/organisms/hero.scss';
@@ -25,3 +26,4 @@
 @import './components/organisms/skills.scss';
 @import './components/organisms/portfolio.scss';
 @import './components/organisms/contact.scss';
+@import './components/organisms/footer.scss';
