--- a/src/scss/components/atoms/logo.scss
+++ b/src/scss/components/atoms/logo.scss
@@ -6,6 +6,10 @@
   line-height: 150%;
   font-size: 3rem;
   font-weight: 700;
+  
+  @media screen and (max-width: 798px) {
+    font-size: 2.6rem;
+  }
 
   span {
     background: $main-gradient;
