--- a/src/scss/components/atoms/navbarLink.scss
+++ b/src/scss/components/atoms/navbarLink.scss
@@ -5,13 +5,23 @@
   color: $gray-300;
   transition: all 0.3s ease-in-out;
   border-radius: 1rem;
-  
+
+  @media screen and (max-width: 798px) {
+    font-size: 1.35rem;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+  }
+
   &:hover {
     color: $gray-900;
     background: $gray-300;
     border-radius: 1rem;
+
+    @media screen and (max-width: 798px) {
+      border-radius: 0.5rem;
+    }
   }
-  
+
   &.-active {
     color: $gray-900;
     background: $gray-300;
