--- a/src/scss/components/molecules/heroText.scss
+++ b/src/scss/components/molecules/heroText.scss
@@ -1,9 +1,10 @@
 .heroText {
-  // background: cornsilk;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  position: relative;
+  z-index: 2;
 
   &__developer-name {
     letter-spacing: -0.03em;
@@ -11,6 +12,22 @@
     font-size: 7.5rem;
     font-weight: 700;
     line-height: 120%;
+    
+    @media screen and (max-width: 1368px){
+      font-size: 6rem;
+    }
+    
+    @media screen and (max-width: 798px) {
+      font-size: 4.5rem;
+    }
+
+    @media screen and (max-width: 598px) {
+      font-size: 4rem;
+    }
+
+    @media screen and (max-width: 398px) {
+      font-size: 3rem;
+    }
   }
 
   &__developer-occupation {
@@ -21,5 +38,21 @@
     line-height: 120%;
     background: $main-gradient;
     @include gradient-text();
+
+    @media screen and (max-width: 1368px){
+      font-size: 5rem;
+    }
+
+    @media screen and (max-width: 798px) {
+      font-size: 3.5rem;
+    }
+    
+    @media screen and (max-width: 598px) {
+      font-size: 3rem;
+    }
+
+    @media screen and (max-width: 398px) {
+      font-size: 2.5rem;
+    }
   }
 }
