--- a/src/scss/components/molecules/navbar.scss
+++ b/src/scss/components/molecules/navbar.scss
@@ -4,14 +4,25 @@
   border-radius: 1.5rem;
   display: flex;
 
+  @media screen and (max-width: 998px) {
+    position: fixed;
+    background: rgba(11, 11, 11, 0.9);
+    backdrop-filter: blur(10px);
+    bottom: 5%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
   &__container {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 1rem 4rem;
-    background: rgba(19, 19, 19, 0.7);
-    backdrop-filter: blur(10px);
     border-radius: 1.5rem;
+  }
+
+  &.-active {
+    display: flex !important;
   }
 }
