--- a/src/scss/components/organisms/hero.scss
+++ b/src/scss/components/organisms/hero.scss
@@ -1,8 +1,15 @@
 .hero {
   width: 100%;
   height: calc(100vh - 91.6px);
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: relative;
+
+  @media screen and (max-width: 998px) {
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
 
   &__container {
     display: flex;
@@ -12,12 +19,37 @@
     text-align: center;
     height: 100%;
     position: relative;
+
+    @media screen and (max-width: 998px) {
+      height: auto;
+    }
   }
 
   &__scroll {
     position: absolute;
     bottom: 3rem;
     opacity: 0.5;
-    @include animation("moveUpAndDown 2s ease-in-out infinite");
+    @include animation('moveUpAndDown 2s ease-in-out infinite');
+
+    @media screen and (max-width: 998px) {
+      display: none;
+    }
+
+  }
+
+  .floatingSocial__container {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+
+    @media screen and (max-width: 998px) {
+      display: flex;
+      align-items: flex-end;
+      justify-content: center;
+      bottom: 15%;
+      position: relative;
+      height: max-content;
+    }
   }
 }
