Ajustes de responsividade

--- a/src/scss/components/atoms/subtitle.scss
+++ b/src/scss/components/atoms/subtitle.scss
@@ -7,4 +7,8 @@
   margin-bottom: -0.5rem;
   font-family: 'Raleway', sans-serif;
   letter-spacing: -0.03em;
+  
+  @media screen and (max-width: 998px) {
+    font-size: 2rem;
+  }
 }
