--- a/src/scss/components/molecules/projectList.scss
+++ b/src/scss/components/molecules/projectList.scss
@@ -8,4 +8,8 @@
   @media screen and (min-width: 1120px) {
     grid-template-columns: repeat(3, 1fr);
   }
+
+  @media screen and (max-width: 568px) {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
