--- a/src/scss/components/molecules/contactList.scss
+++ b/src/scss/components/molecules/contactList.scss
@@ -20,6 +20,11 @@
     border: 1.5px solid transparent;
     transition: opacity 0.3s ease-in-out;
 
+    @media screen and (max-width: 998px) {
+      padding: 0.8rem;
+      border-radius: 0.8rem;
+    }
+
     @media screen and (min-width: 568px) {
       &:nth-child(2) {
         margin-left: 2.6rem;
@@ -28,7 +33,7 @@
 
     @media screen and (max-width: 568px) {
       &:nth-child(2) {
-        margin-top: 1.6rem;
+        margin: 1.6rem 0 0;
       }
     }
 
@@ -52,6 +57,12 @@
     align-items: center;
     margin: 0.5rem;
     flex: 1;
+
+    @media screen and (max-width: 998px) {
+      width: 25px;
+      height: 25px;
+      margin: 0.5rem 1rem 0.5rem 0.5rem;
+    }
   }
 
   &__wrapper {
@@ -61,6 +72,16 @@
       font-weight: 600;
       margin-bottom: 0.8rem;
       color: $gray-400;
+
+      @media screen and (max-width: 998px) {
+        font-size: 1.4rem;
+      }
+    }
+
+    p {
+      @media screen and (max-width: 998px) {
+        font-size: 1.4rem;
+      }
     }
   }
 }
