--- a/src/scss/components/molecules/projectCard.scss
+++ b/src/scss/components/molecules/projectCard.scss
@@ -60,6 +60,33 @@
     }
   }
 
+  @media screen and (max-width: 568px) {
+    &:nth-child(1) {
+      grid-column: 1;
+      grid-row: auto;
+    }
+    &:nth-child(2) {
+      grid-column: 1;
+      grid-row: auto;
+    }
+    &:nth-child(3) {
+      grid-column: 1;
+      grid-row: auto;
+    }
+    &:nth-child(4) {
+      grid-column: 1;
+      grid-row: auto;
+    }
+    &:nth-child(5) {
+      grid-column: 1;
+      grid-row: auto;
+    }
+    &:nth-child(6) {
+      grid-column: 1;
+      grid-row: auto;
+    }
+  }
+
   &__container {
     position: relative;
   }
