--- a/src/scss/components/organisms/header.scss
+++ b/src/scss/components/organisms/header.scss
@@ -8,7 +8,9 @@
   backdrop-filter: blur(10px);
   box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.15);
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 998px) {
+    // background: none;
+    backdrop-filter: none;
     background: linear-gradient(180deg, #070809 0%, rgba(0, 0, 0, 0) 100%);
     box-shadow: none;
   }
