--- a/src/scss/components/molecules/presentationPhoto.scss
+++ b/src/scss/components/molecules/presentationPhoto.scss
@@ -17,6 +17,11 @@
     max-width: 310px;
     letter-spacing: -0.03em;
 
+    @media screen and (min-width: 1120px) {
+      font-size: 4.8rem;
+      max-width: 360px;
+    }
+
     @media screen and (max-width: 998px) {
       right: auto;
       top: auto;
