--- a/src/scss/components/molecules/projectList.scss
+++ b/src/scss/components/molecules/projectList.scss
@@ -7,6 +7,7 @@
 
   @media screen and (min-width: 1120px) {
     grid-template-columns: repeat(3, 1fr);
+    grid-gap: 6rem;
   }
 
   @media screen and (max-width: 568px) {
