--- a/src/scss/components/organisms/header.scss
+++ b/src/scss/components/organisms/header.scss
@@ -21,5 +21,7 @@
     margin: 0 3rem;
     align-items: center;
     justify-content: space-between;
+    max-width: 1920px;
+    margin: 0 auto;
   }
 }
