--- a/src/scss/components/organisms/hero.scss
+++ b/src/scss/components/organisms/hero.scss
@@ -42,6 +42,7 @@
     top: 0;
     width: 100%;
     height: 100%;
+    max-width: 1920px;
 
     @media screen and (max-width: 998px) {
       display: flex;
