--- a/src/scss/components/organisms/skills.scss
+++ b/src/scss/components/organisms/skills.scss
@@ -3,7 +3,7 @@
   align-items: center;
   flex-direction: column;
   max-width: 1920px;
-  margin: 12rem 0;
+  margin: 12rem auto 0;
 
   &__container {
     width: 80%;
