--- a/src/scss/components/atoms/navbarLink.scss
+++ b/src/scss/components/atoms/navbarLink.scss
@@ -3,8 +3,9 @@
   padding: 0.7rem;
   display: inline-flex;
   color: $gray-300;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.2s ease-in-out;
   border-radius: 1rem;
+  margin: 0 0.5rem;
 
   @media screen and (max-width: 798px) {
     font-size: 1.35rem;
@@ -25,5 +26,6 @@
   &.-active {
     color: $gray-900;
     background: $gray-300;
+    transition: all 0.2s ease-in-out;
   }
 }
