Novos ajustes de estilização e estrutura

--- a/src/scss/components/molecules/techList.scss
+++ b/src/scss/components/molecules/techList.scss
@@ -3,7 +3,7 @@
   align-items: center;
   flex-wrap: wrap;
   margin-top: 0.5rem;
-  justify-content: center;
+  justify-content: flex-start;
 
   &__item {
     margin: 0.5rem;
