--- a/src/scss/components/molecules/projectCard.scss
+++ b/src/scss/components/molecules/projectCard.scss
@@ -31,9 +31,24 @@
       grid-column: 3;
       grid-row: 3 / span 2;
     }
+   
+    &:nth-child(7) {
+      grid-column: 1;
+      grid-row: 5 / span 2;
+    }
+
+    &:nth-child(8) {
+      grid-column: 2;
+      grid-row: 6 / span 1;
+    }
+
+    &:nth-child(9) {
+      grid-column: 3;
+      grid-row: 5 / span 2;
+    }
   }
 
-  @media screen and (max-width: 1118px) {
+  @media screen and (max-width: 1440px) {
     &:nth-child(1) {
       grid-column: 1;
       grid-row: 1 / span 2;
@@ -58,9 +73,21 @@
       grid-column: 2;
       grid-row: 6 / span 1;
     }
+    &:nth-child(7) {
+      grid-column: 1;
+      grid-row: 7 / span 2;
+    }
+    &:nth-child(8) {
+      grid-column: 2;
+      grid-row: 8 / span 1;
+    }
+    &:nth-child(9) {
+      grid-column: 1;
+      grid-row: 9 / span 2;
+    }
   }
 
-  @media screen and (max-width: 568px) {
+  @media screen and (max-width: 768px) {
     &:nth-child(1) {
       grid-column: 1;
       grid-row: auto;
@@ -85,10 +112,26 @@
       grid-column: 1;
       grid-row: auto;
     }
+    &:nth-child(7) {
+      grid-column: 1;
+      grid-row: auto;
+    }
+    &:nth-child(8) {
+      grid-column: 1;
+      grid-row: auto;
+    }
+    &:nth-child(9) {
+      grid-column: 1;
+      grid-row: auto;
+    }
   }
 
   &__container {
     position: relative;
+  }
+
+  &__image {
+    pointer-events: none;
   }
 
   &__link {
@@ -108,6 +151,16 @@
     &:hover {
       color: $white;
     }
+  }
+
+  &__freelancer {
+    position: relative;
+    color: $gray-400;
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin: 1rem 0 0 0.5rem;
+    display: flex;
+    align-items: center;
   }
 
   &__header {
@@ -130,6 +183,7 @@
       line-height: 150%;
       color: $gray-500;
       font-size: 1.6rem;
+      margin-left: 0.5rem;
     }
   }
 
