--- a/src/scss/components/organisms/portfolio.scss
+++ b/src/scss/components/organisms/portfolio.scss
@@ -4,6 +4,18 @@
   flex-direction: column;
   max-width: 1920px;
   margin: 12rem auto 0;
+  position: relative;
+
+  
+  &::after {
+    content: url('/assets/images/bg-left.svg');
+    position: absolute;
+    top: 10%;
+    opacity: 0.7;
+    left: 0;
+    z-index: -1;
+    display: block;
+  }
 
   &__container {
     width: 80%;
