--- a/src/scss/components/organisms/hero.scss
+++ b/src/scss/components/organisms/hero.scss
@@ -10,7 +10,7 @@
     content: url('/assets/images/bg-right.svg');
     position: absolute;
     top: 30%;
-    opacity: 0.7;
+    opacity: 0.25;
     right: 0;
     z-index: -1;
     display: block;
@@ -19,6 +19,7 @@
   @media screen and (max-width: 998px) {
     flex-direction: column;
     justify-content: space-evenly;
+    height: 100vh;
   }
 
   &__container {
