--- a/src/scss/components/atoms/navbarLink.scss
+++ b/src/scss/components/atoms/navbarLink.scss
@@ -6,6 +6,7 @@
   transition: all 0.2s ease-in-out;
   border-radius: 1rem;
   margin: 0 0.5rem;
+  cursor: pointer;
 
   @media screen and (max-width: 798px) {
     font-size: 1.35rem;
@@ -26,6 +27,6 @@
   &.-active {
     color: $gray-900;
     background: $gray-300;
-    transition: all 0.2s ease-in-out;
+    transition: all 0.1s ease-in-out;
   }
 }
