Removido interação de hover no mobile

--- a/src/scss/components/molecules/floatingSocial.scss
+++ b/src/scss/components/molecules/floatingSocial.scss
@@ -60,14 +60,16 @@
     border-radius: 50%;
   }
 
-  &:hover {
-    transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
-    transform: scale(1.2);
-
-    svg {
-      opacity: 1;
-      color: $gray-300;
+  @media screen and (min-width: 998px) {
+    &:hover {
       transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+      transform: scale(1.2);
+  
+      svg {
+        opacity: 1;
+        color: $gray-300;
+        transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+      }
     }
   }
 
