--- a/src/scss/components/molecules/floatingSocial.scss
+++ b/src/scss/components/molecules/floatingSocial.scss
@@ -84,7 +84,7 @@
   }
 
   &__overlay {
-    background: #fff;
+    background: $white;
     border-radius: 50%;
     display: flex;
     align-items: center;
