--- a/src/scss/abstracts/_colors.scss
+++ b/src/scss/abstracts/_colors.scss
@@ -1,14 +1,14 @@
-$main-gradient:  linear-gradient(46.19deg, #0066FF 5.66%, #EA52F8 67.37%);
+$main-gradient: linear-gradient(46.19deg, #0066ff 5.66%, #ea52f8 67.37%);
 
 $black: #070809;
 $white: #fff;
 
 $gray-900: #212529;
-$gray-800: #343A40;
+$gray-800: #343a40;
 $gray-700: #495057;
-$gray-600: #6C757D;
-$gray-500: #ADB5BD;
-$gray-400: #CED4DA;
-$gray-300: #DEE2E6;
-$gray-200: #E9ECEF;
-$gray-100: #F8F9FA;
+$gray-600: #6c757d;
+$gray-500: #adb5bd;
+$gray-400: #ced4da;
+$gray-300: #dee2e6;
+$gray-200: #e9ecef;
+$gray-100: #f8f9fa;
