Style: Ajustes finos de estilização

--- a/src/scss/abstracts/_colors.scss
+++ b/src/scss/abstracts/_colors.scss
@@ -3,7 +3,7 @@ $main-gradient:  linear-gradient(46.19deg, #0066FF 5.66%, #EA52F8 67.37%);
 $black: #070809;
 $white: #fff;
 
-$gray-900: #212529;
+$gray-900: #0d0d0d;
 $gray-800: #343A40;
 $gray-700: #495057;
 $gray-600: #6C757D;
