--- a/src/scss/components/molecules/navbar.scss
+++ b/src/scss/components/molecules/navbar.scss
@@ -14,6 +14,10 @@
     transform: translateX(-50%);
   }
 
+  @media screen and (max-width: 798px) {
+    max-width: max-content;
+  }
+
   &__container {
     width: 100%;
     display: flex;
