--- a/src/scss/components/organisms/header.scss
+++ b/src/scss/components/organisms/header.scss
@@ -4,9 +4,7 @@
   width: 100%;
   top: 0;
   z-index: 9;
-  background: rgba(11, 11, 11, 0.7);
   backdrop-filter: blur(10px);
-  box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.15);
 
   @media screen and (max-width: 998px) {
     backdrop-filter: none;
@@ -20,7 +18,7 @@
     margin: 0 3rem;
     align-items: center;
     justify-content: space-between;
-    max-width: 1920px;
+    width: 82%;
     margin: 0 auto;
   }
 }
