--- a/src/scss/abstracts/_colors.scss
+++ b/src/scss/abstracts/_colors.scss
@@ -1,6 +1,6 @@
-$main-gradient: linear-gradient(46.19deg, #0066ff 5.66%, #ea52f8 67.37%);
+$main-gradient: linear-gradient(69.44deg, #6B47EA 8.45%, #6517EE 29.63%, #9571DD 91.41%);
 
-$black: #020202;
+$black: #000;
 $white: #fff;
 
 $gray-900: #0f0f0f;
@@ -12,3 +12,25 @@ $gray-400: #ced4da;
 $gray-300: #dee2e6;
 $gray-200: #e9ecef;
 $gray-100: #f8f9fa;
+
+$primary-50: #F3F3F3;
+$primary-100: #E8E8E8;
+$primary-200: #C5C5C5;
+$primary-300: #A3A3A3;
+$primary-400: #5D5D5D;
+$primary-500: #181818;
+$primary-600: #161616;
+$primary-700: #121212;
+$primary-800: #0E0E0E;
+$primary-900: #0C0C0C;
+
+$secondary-50: #F8F6FE;
+$secondary-100: #F0EDFD;
+$secondary-200: #DAD1FA;
+$secondary-300: #C4B5F7;
+$secondary-400: #977EF0;
+$secondary-500: #6B47EA;
+$secondary-600: #6040D3;
+$secondary-700: #5035B0;
+$secondary-800: #402B8C;
+$secondary-900: #342373;
