--- a/src/scss/components/molecules/navbar.scss
+++ b/src/scss/components/molecules/navbar.scss
@@ -1,32 +1,15 @@
 .navbar {
-  width: 100%;
-  max-width: 330px;
-  border-radius: 1rem;
-  display: flex;
-
-  @media screen and (max-width: 998px) {
-    position: fixed;
-    background: rgba(11, 11, 11, 0.9);
-    backdrop-filter: blur(10px);
-    box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.15);
-    top: 3%;
-    left: 50%;
-    transform: translateX(-50%);
-    align-items: center;
-    justify-content: center;
-  }
-
-  @media screen and (max-width: 798px) {
-    max-width: max-content;
-  }
+  @include flex();
 
   &__container {
     width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1rem 2rem;
-    border-radius: 1.5rem;
+    @include flex;
+    gap: 60px;
+
+    @media screen and (max-width: 768px) {
+      margin-top: 14px;
+      gap: 30px;
+    }
   }
 
   &.-active {
