--- a/src/scss/components/organisms/header.scss
+++ b/src/scss/components/organisms/header.scss
@@ -1,24 +1,25 @@
 .header {
-  padding: 1.5rem 2rem;
   position: sticky;
   width: 100%;
   top: 0;
   z-index: 9;
   backdrop-filter: blur(10px);
+  background: $primary-700;
+  height: 70px;
+  @include flex;
 
-  @media screen and (max-width: 998px) {
-    backdrop-filter: none;
-    background: linear-gradient(180deg, #070809 0%, rgba(0, 0, 0, 0) 100%);
-    box-shadow: none;
+  @media screen and (max-width: 768px) {
+    margin-top: 16px;
   }
 
   &__container {
+    @include container;
+    @include flex(space-between, center);
     position: relative;
-    display: flex;
-    margin: 0 3rem;
-    align-items: center;
-    justify-content: space-between;
-    width: 82%;
-    margin: 0 auto;
+
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+      align-items: flex-start;
+    }
   }
 }
