--- a/src/scss/utilities/_mixins.scss
+++ b/src/scss/utilities/_mixins.scss
@@ -94,3 +94,24 @@
     bottom: 17%;
   }
 }
+
+/* new mixins */
+@mixin container {
+  max-width: 1540px;
+  width: 100%;
+  margin: 0 auto;
+
+  @media screen and (max-width: 1598px) {
+    max-width: calc(100% - 80px);
+  }
+
+  @media screen and (max-width: 768px) {
+    max-width: calc(100% - 60px);
+  }
+}
+
+@mixin flex($justify: center, $align: center) {
+  display: flex;
+  justify-content: $justify;
+  align-items: $align;
+}
