--- a/src/scss/components/organisms/hero.scss
+++ b/src/scss/components/organisms/hero.scss
@@ -1,66 +1,18 @@
 .hero {
   width: 100%;
-  height: calc(100vh - 91.6px);
+  height: 100%;
+  max-height: 100%;
+  min-height: 100%;
+  margin: 100px 0;
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
 
-  &::before {
-    content: url('/assets/images/bg-right.svg');
-    position: absolute;
-    top: 30%;
-    opacity: 0.35;
-    right: 0;
-    z-index: -1;
-    display: block;
-  }
-
-  @media screen and (max-width: 998px) {
+  @media screen and (max-width: 960px) {
     flex-direction: column;
     justify-content: space-evenly;
-    height: 100vh;
-  }
-
-  &__container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
     height: 100%;
-    position: relative;
-
-    @media screen and (max-width: 998px) {
-      height: auto;
-    }
-  }
-
-  &__scroll {
-    position: absolute;
-    bottom: 3rem;
-    opacity: 0.5;
-    @include animation('moveUpAndDown 2s ease-in-out infinite');
-
-    @media screen and (max-width: 998px) {
-      display: none;
-    }
-  }
-
-  .floatingSocial__container {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    max-width: 1920px;
-
-    @media screen and (max-width: 998px) {
-      display: flex;
-      align-items: flex-end;
-      justify-content: center;
-      bottom: 15%;
-      position: relative;
-      height: max-content;
-    }
+    margin: 0;
   }
 }
