--- a/src/scss/components/atoms/subtitle.scss
+++ b/src/scss/components/atoms/subtitle.scss
@@ -1,16 +1,14 @@
-.sectionHeader__subtitle {
-  font-size: 2.6rem;
+.subtitle {
+  font-size: 18px;
   line-height: 150%;
   font-weight: 600;
   text-transform: uppercase;
-  margin-bottom: -0.5rem;
-  font-family: 'Raleway', sans-serif;
-  letter-spacing: -0.03em;
+  margin-bottom: -6px;
   background: $main-gradient;
   @include gradient-text();
   width: max-content;
 
-  @media screen and (max-width: 998px) {
-    font-size: 2rem;
+  @media screen and (max-width: 1280px) {
+    font-size: 16px;
   }
 }
