--- a/src/scss/components/organisms/portfolio.scss
+++ b/src/scss/components/organisms/portfolio.scss
@@ -1,25 +1,7 @@
 .portfolio {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  max-width: 1920px;
-  margin: 12rem auto;
-  position: relative;
-
-  &::after {
-    content: url('/assets/images/bg-left.svg');
-    position: absolute;
-    top: 10%;
-    opacity: 0.35;
-    left: 0;
-    z-index: -1;
-    display: block;
-  }
+  margin: 6rem 0 12rem 0;
 
   &__container {
-    width: 80%;
-    margin: 0 auto;
-    padding: 1rem 0;
-    display: flex;
+    @include container;
   }
 }
