--- a/src/scss/abstracts/_colors.scss
+++ b/src/scss/abstracts/_colors.scss
@@ -1,4 +1,9 @@
-$main-gradient: linear-gradient(69.44deg, #6B47EA 8.45%, #6517EE 29.63%, #9571DD 91.41%);
+$main-gradient: linear-gradient(
+  69.44deg,
+  #6b47ea 8.45%,
+  #6517ee 29.63%,
+  #9571dd 91.41%
+);
 
 $black: #000;
 $white: #fff;
@@ -13,24 +18,24 @@ $gray-300: #dee2e6;
 $gray-200: #e9ecef;
 $gray-100: #f8f9fa;
 
-$primary-50: #F3F3F3;
-$primary-100: #E8E8E8;
-$primary-200: #C5C5C5;
-$primary-300: #A3A3A3;
-$primary-400: #5D5D5D;
+$primary-50: #f3f3f3;
+$primary-100: #e8e8e8;
+$primary-200: #c5c5c5;
+$primary-300: #a3a3a3;
+$primary-400: #5d5d5d;
 $primary-500: #181818;
 $primary-600: #161616;
 $primary-700: #121212;
-$primary-800: #0E0E0E;
-$primary-900: #0C0C0C;
+$primary-800: #0e0e0e;
+$primary-900: #0c0c0c;
 
-$secondary-50: #F8F6FE;
-$secondary-100: #F0EDFD;
-$secondary-200: #DAD1FA;
-$secondary-300: #C4B5F7;
-$secondary-400: #977EF0;
-$secondary-500: #6B47EA;
-$secondary-600: #6040D3;
-$secondary-700: #5035B0;
-$secondary-800: #402B8C;
+$secondary-50: #f8f6fe;
+$secondary-100: #f0edfd;
+$secondary-200: #dad1fa;
+$secondary-300: #c4b5f7;
+$secondary-400: #977ef0;
+$secondary-500: #6b47ea;
+$secondary-600: #6040d3;
+$secondary-700: #5035b0;
+$secondary-800: #402b8c;
 $secondary-900: #342373;
