--- a/src/scss/components/organisms/footer.scss
+++ b/src/scss/components/organisms/footer.scss
@@ -1,29 +1,35 @@
 .footer {
-  display: flex;
-  padding: 3rem 1rem;
-  border-top: 1px solid $gray-900;
+  background-color: $primary-600;
+  height: 100%;
+  min-height: 275px;
+  @include flex;
 
-  .logo {
-    font-size: 2.3rem;
+  &__container {
+    @include container;
+    @include flex(space-between, flex-end);
 
-    @media screen and (max-width: 768px) {
-      margin-bottom: 1.6rem;
+    @media screen and (max-width: 960px) {
+      flex-direction: column;
+      align-items: center;
+      gap: 3rem;
+      padding: 0 1rem;
     }
   }
 
-  &__container {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    width: 100%;
+  &__content {
+    max-width: 60rem;
 
-    @media screen and (max-width: 768px) {
-      flex-direction: column;
-    }
+    .text {
+      font-size: 3rem;
+      line-height: 150%;
+      font-weight: 500;
+      color: $white;
+      margin-bottom: 2.5rem;
 
-    > p {
-      font-size: 1.3rem;
-      color: $gray-400;
+      @media screen and (max-width: 960px) {
+        font-size: 2.2rem;
+        margin-bottom: 1.6rem;
+      }
     }
   }
 }
