feat: navegação no menu

--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -16,7 +16,8 @@
 
 html {
   font-size: 62.5%;
-  scroll-behavior: smooth;
+  --scroll-behavior: smooth !important;
+  scroll-behavior: smooth !important;
   -webkit-overflow-scrolling: touch;
   overflow-x: hidden;
 }
