--- a/src/scss/components/organisms/hero.scss
+++ b/src/scss/components/organisms/hero.scss
@@ -8,6 +8,7 @@
   align-items: center;
   justify-content: center;
   position: relative;
+  scroll-margin-top: 30rem;
 
   @media screen and (max-width: 960px) {
     flex-direction: column;
