--- a/src/scss/components/atoms/navbarLink.scss
+++ b/src/scss/components/atoms/navbarLink.scss
@@ -1,6 +1,6 @@
 .navbar__link {
-  font-size: 16px;
-  line-height: 24px;
+  font-size: 1.6rem;
+  line-height: 2.4rem;
   font-weight: 400;
   color: $primary-100;
   display: inline-flex;
