--- a/src/scss/components/atoms/subtitle.scss
+++ b/src/scss/components/atoms/subtitle.scss
@@ -1,14 +1,14 @@
 .subtitle {
-  font-size: 18px;
+  font-size: 1.8rem;
   line-height: 150%;
   font-weight: 600;
   text-transform: uppercase;
-  margin-bottom: -6px;
+  margin-bottom: -0.6rem;
   background: $main-gradient;
   @include gradient-text();
   width: max-content;
 
   @media screen and (max-width: 1280px) {
-    font-size: 16px;
+    font-size: 1.6rem;
   }
 }
