--- a/src/scss/components/molecules/project-list.scss
+++ b/src/scss/components/molecules/project-list.scss
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   flex-wrap: wrap;
-  padding: 0 20px;
+  padding: 0 2rem;
   row-gap: 5.5rem;
   column-gap: 2rem;
 
