--- a/src/scss/components/organisms/header.scss
+++ b/src/scss/components/organisms/header.scss
@@ -3,13 +3,13 @@
   width: 100%;
   top: 0;
   z-index: 9;
-  backdrop-filter: blur(10px);
   background: $primary-700;
-  height: 70px;
+  height: 7rem;
   @include flex;
 
   @media screen and (max-width: 768px) {
-    margin-top: 16px;
+    margin-top: 1.6rem;
+    height: auto;
   }
 
   &__container {
@@ -20,6 +20,8 @@
     @media screen and (max-width: 768px) {
       flex-direction: column;
       align-items: flex-start;
+      max-width: calc(100% - 5rem);
+      margin: 2rem 0 1.5rem;
     }
   }
 }
