--- a/src/scss/components/organisms/hero.scss
+++ b/src/scss/components/organisms/hero.scss
@@ -3,7 +3,7 @@
   height: 100%;
   max-height: 100%;
   min-height: 100%;
-  margin: 100px 0;
+  margin: 10rem 0;
   display: flex;
   align-items: center;
   justify-content: center;
