--- a/src/scss/components/molecules/project-card.scss
+++ b/src/scss/components/molecules/project-card.scss
@@ -9,6 +9,11 @@
 
   &:hover {
     .project-card__image {
+      &::after {
+        opacity: 0;
+        transition: opacity 0.5s ease-in-out;
+      }
+
       img {
         transform: scale(1.08);
         transition: transform 0.5s ease-in-out;
@@ -37,6 +42,19 @@
     max-width: 736px;
     max-height: 426px;
     overflow: hidden;
+    position: relative;
+
+    &::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      display: block;
+      width: 100%;
+      height: 100%;
+      background: $primary-800;
+      opacity: 0.15;
+      transition: opacity 0.5s ease-in-out;
+    }
 
     img {
       width: 100%;
